--- a/COVID_Sustainability_Global.Rmd
+++ b/COVID_Sustainability_Global.Rmd
@@ -572,22 +572,22 @@ data.train.test_diff <- data.train.test %>% dplyr::select(-c(contains("_2018") |
 Running regsubsets:
 
 ```{r}
-#subset data.train & data.test together since Cp will approx test error
-data.fit1 <- data.train.test %>% dplyr::select(VSI, cumulative_total_cases_per_hundred_prevac, cumulative_total_deaths_per_hundred_prevac, weekly.new.deaths.per.100_max, Continent, Electricity.Access_3yr, GDP.PerCapita.Current_2018, UrbanPopulation.Prop_3yr, LifeExpenctancy_rel.diff, Trade.GDP_3yr, CompulsoryEducationDurationYears_3yr)
-
-fit1 <- regsubsets(VSI ~., data.fit1 , nvmax=25, method="exhaustive")
-f.e <- summary(fit1)
-opt.size <- which.min(f.e$cp) #pick size with lowest cp
-fit.exh.var <- f.e$which # logic indicators which variables are in
-colnames(fit.exh.var)[fit.exh.var[opt.size,]][-1] # output variables selected
-fit2 <- lm(VSI ~ Continent+Electricity.Access_3yr+GDP.PerCapita.Current_2018+CompulsoryEducationDurationYears_3yr, data.fit1)    # fit with selected variables
-Anova(fit2) 
-#note - not all significant but should stick with model minimizing Cp, right?
-
-#check assumptions - NOTE - not great!
-par(mfrow=c(1,2))
-plot(fit2, 1) #linearity & homoscedasticity
-plot(fit2, 2) #normality
+# #subset data.train & data.test together since Cp will approx test error
+# data.fit1 <- data.train.test %>% dplyr::select(VSI, cumulative_total_cases_per_hundred_prevac, cumulative_total_deaths_per_hundred_prevac, weekly.new.deaths.per.100_max, Continent, Electricity.Access_3yr, GDP.PerCapita.Current_2018, UrbanPopulation.Prop_3yr, LifeExpenctancy_rel.diff, Trade.GDP_3yr, CompulsoryEducationDurationYears_3yr)
+# 
+# fit1 <- regsubsets(VSI ~., data.fit1 , nvmax=25, method="exhaustive")
+# f.e <- summary(fit1)
+# opt.size <- which.min(f.e$cp) #pick size with lowest cp
+# fit.exh.var <- f.e$which # logic indicators which variables are in
+# colnames(fit.exh.var)[fit.exh.var[opt.size,]][-1] # output variables selected
+# fit2 <- lm(VSI ~ Continent+Electricity.Access_3yr+GDP.PerCapita.Current_2018+CompulsoryEducationDurationYears_3yr, data.fit1)    # fit with selected variables
+# Anova(fit2) 
+# #note - not all significant but should stick with model minimizing Cp, right?
+# 
+# #check assumptions - NOTE - not great!
+# par(mfrow=c(1,2))
+# plot(fit2, 1) #linearity & homoscedasticity
+# plot(fit2, 2) #normality
 ```
 
 
@@ -638,11 +638,11 @@ nn.train.final <- dummy_cols(nn.trainimp, remove_first_dummy = TRUE) %>% #settin
 data_xtrain <- nn.train.final %>% dplyr::select(-VSI) %>% as.matrix()  #dim(data3_xtrain)
 data_ytrain <- nn.train.final %>% dplyr::select(VSI) %>% as.matrix()  # find y
 
-## validation input/y - figure this out with impute/dummy vars later!
-data_xval <- data.val[, -204]   #dim(data3_xtrain), remove y
-data_yval <- data.val[, 204]   # find y
-data_xval <- as.matrix(data_xval) # make sure it it is a matrix
-data_yval <- as.matrix(data_yval) # make sure it it is a matrix
+# ## validation input/y - figure this out with impute/dummy vars later!
+# data_xval <- data.val[, -204]   #dim(data3_xtrain), remove y
+# data_yval <- data.val[, 204]   # find y
+# data_xval <- as.matrix(data_xval) # make sure it it is a matrix
+# data_yval <- as.matrix(data_yval) # make sure it it is a matrix
 ```
 
 
@@ -655,10 +655,10 @@ set_random_seed(10)
 p <- dim(data_xtrain)[2] # number of input variables (columns)
 model <- keras_model_sequential() %>%
   layer_batch_normalization(input_shape = c(p)) %>% #recommended, not certain it's correct
-  layer_dense(units = 16, activation = "relu") %>%
-  # layer_dropout(0.25) %>% # drop 25% - https://stackoverflow.com/questions/37232782/nan-loss-when-training-regression-network
-  layer_dense(units = 8, activation = "relu") %>%  
-  # layer_dropout(0.25) %>% # drop 25%
+  layer_dense(units = 24, activation = "relu") %>%
+  layer_dropout(0.25) %>% # drop 20% - https://stackoverflow.com/questions/37232782/nan-loss-when-training-regression-network
+  layer_dense(units = 26, activation = "relu") %>%  
+  layer_dropout(0.25) %>% # drop 20%
   layer_dense(units = 1, activation = "linear") # output = 1 unit for linear(?) regression
 print(model)
 
@@ -669,20 +669,20 @@ print(model)
 #   metrics = list("mean_squared_error"),
 # )
 
-# #compile model B (based on https://tensorflow.rstudio.com/tutorials/beginners/basic-ml/tutorial_basic_regression/)
-# model %>%
-#   compile(
-#     loss = "mse",
-#     optimizer = optimizer_rmsprop(),
-#     metrics = list("mean_absolute_error")
-#   )
+#compile model B (based on https://tensorflow.rstudio.com/tutorials/beginners/basic-ml/tutorial_basic_regression/)
+model %>%
+  compile(
+    loss = "mse",
+    optimizer = optimizer_rmsprop(),
+    metrics = list("mean_absolute_error")
+  )
 
-#compile model C (based on https://towardsdatascience.com/keras-and-r-predicting-blood-glucose-levels-with-the-sequential-model-596efe89a6b8)
-model %>% compile(
-  loss = 'mean_squared_error',
-  optimizer = 'adam',
-  metrics = c('mae')
-)
+# #compile model C (based on https://towardsdatascience.com/keras-and-r-predicting-blood-glucose-levels-with-the-sequential-model-596efe89a6b8)
+# model %>% compile(
+#   loss = 'mean_squared_error',
+#   optimizer = 'adam',
+#   metrics = c('mae')
+# )
 ```
 
 Fitting model
@@ -710,6 +710,16 @@ good (?) params:
   - loss = 1.18, val_loss = 2.41
 16x8x1, model C, epochs=150 & batch size=12 @ epoch 20
   - loss = 1.24, val_loss = 2.06 - looks gross though
+16x8x1, model B, epochs=150 & batch size=12 @ epoch 20 w / dropout
+  - loss = 1.75, val_loss = 2.2
+24x16x1, model B, epochs=150 & batch size=12 @ epoch 20
+  - loss = 1.16, val_loss = 1.94
+24x16x1, model B, epochs=150 & batch size=12 @ epoch 20 w/ dropout
+  - loss = 1.81, val_loss = 1.93
+24x16x1, model B, epochs=150 & batch size=24 @ epoch 20
+  - loss = 0.83, val_loss = 3.24
+24x16x1, model B, epochs=150 & batch size=24 @ epoch 20 w/ dropout 25%
+  - loss = 1.78, val_loss = 2.4
 
 ```{r}
 set_random_seed(10)
@@ -717,7 +727,7 @@ fit.nn <- model %>% fit(
   data_xtrain,
   data_ytrain,
   epochs = 150,
-  batch_size = 12,
+  batch_size = 24,
   validation_split = .15 # set 15% of the data_xtrain, data_ytrain as the validation data
 )
 
